CSS Tutorial & CSS Project 1

--- a/01_HTML_PROJECT/ContactUs.html
+++ b/01_HTML_PROJECT/ContactUs.html
@@ -6,6 +6,13 @@
     <meta name="description" content="A page to let users contact the shop" />
     <title>Contact Us</title>
     <link rel="icon" href="./images/html.jpeg" type="image/x-icon" />
+    <style>
+      body {
+        margin: 7rem;
+        padding: 3rem;
+        border: 2px solid black;
+      }
+    </style>
   </head>
   <body>
     <header>
