--- a/01_HTML_PROJECT/StoreHours.html
+++ b/01_HTML_PROJECT/StoreHours.html
@@ -5,6 +5,13 @@
     <meta name="author" content="Tejaswini" />
     <link rel="icon" href="./images/html.jpeg" type="image/x-icon" />
     <title>Store Hours</title>
+    <style>
+      body {
+        margin: 7rem;
+        padding: 3rem;
+        border: 2px solid black;
+      }
+    </style>
   </head>
   <body>
     <header>
